# Redirector

./: .env-example  .gitignore  Dockerfile  compose-dev.yaml  compose-prod.yaml  pyproject.toml
src/: main.py
src/api/: api_prestart.py  crud.py  deps.py  initial_data.py  models.py
src/api/alembic/: env.py
src/api/alembic/versions/: c893342aec28_.py  e824d31ea424_.py
src/api/core/: config.py  db.py  security.py
src/api/routes/: __init__.py  redirects.py
src/scripts/: prestart.sh
