[project]
name = "redirector"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.8",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.5",
    "psycopg-binary>=3.2.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]
